Merge with HEAD
git-svn-id: svn://svn.code.sf.net/p/lockss/svn/lockss-daemon/branches/LOCALHASH@18237 4f837ed2-42f5-46e7-a7a5-fa17313484d4